# smartis_api_wrapper

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  setup.py
core/: config.py
smartis_api/: __init__.py  api.py  reports.py
