[tool.poetry]
name = "smartis-api"
version = "0.1.0"
description = ""
authors = ["Artem Samoilov <samoylovartem07@gmail.com>"]
readme = "README.md"
packages = [{include = "smartis_api"}]

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^1.10.9"
requests = "^2.31.0"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
